# multidocs-olllama-rag-app

./: README.md  app_multiple.py  main.py  pyproject.toml  requirements.txt
