[project]
name = "multidocs-olllama-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "chromadb==0.5.5",
    "langchain==0.2.16",
    "langchain-chroma>=0.1.2",
    "langchain-community==0.2.16",
    "langchain-core>=0.2.43",
    "langchain-huggingface>=0.0.3",
    "langchain-ollama>=0.1.3",
    "langchain-text-splitters>=0.2.4",
    "posthog>=7.12.0",
    "pydantic>=2.13.3",
    "pypdf==4.3.1",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "unstructured>=0.22.22",
]
